fix(about): removed margin on faces and align properly

--- a/app/client/stylesheets/components/pu-article.sass
+++ b/app/client/stylesheets/components/pu-article.sass
@@ -49,9 +49,6 @@
             &:first-child
                 margin-top: 0
 
-    .pu-face
-        margin-right: 50px
-
     &-morespace
         > .pu-list
             margin-top: 40px
